Add auth/verify path to server for checking login state
